More structural work -- now builds liblambrex.a which depends on AMReX

--- a/examples/makefile
+++ b/examples/makefile
@@ -1,6 +1,7 @@
 # directory paths
 AMREXDIR = ../libamrex
-VPATH = $(AMREXDIR)/lib
+LAMBREXDIR = ../liblambrex
+VPATH = $(AMREXDIR)/lib:$(LAMBREXDIR)
 
 # compiler
 CXX = g++
@@ -8,14 +9,14 @@ CPPFLAGS = -Wall -O3
 
 # dependencies
 HEADERS =
-DEPLIBS = -lamrex
+DEPLIBS = -lamrex -llambrex
 LIBS = -lgfortran
 
 %.o: %.cpp $(HEADERS)
-	$(CXX) $(CPPFLAGS) -c $< -I$(AMREXDIR)/include -I../include
+	$(CXX) $(CPPFLAGS) -c $< -I../include
 
 pulse: pulse.o $(DEPLIBS)
-	$(CXX) $< -o $@ -L$(AMREXDIR)/lib $(DEPLIBS) $(LIBS)
+	$(CXX) $< -o $@ -L$(AMREXDIR)/lib -L$(LAMBREXDIR) $(DEPLIBS) $(LIBS)
 
 all: pulse
 
