examples/makefile: updated includes, fixed line endings

--- a/examples/makefile
+++ b/examples/makefile
@@ -1,14 +1,15 @@
 # directory paths
 AMREXDIR = ../libamrex
 LAMBREXDIR = ../liblambrex
-VPATH = $(AMREXDIR)/lib:$(LAMBREXDIR)
+INCLUDEDIR = ../include
+VPATH = $(INCLUDEDIR):$(AMREXDIR)/lib:$(LAMBREXDIR)
 
 # compiler
 CXX = g++
 CPPFLAGS = -Wall -O3
 
 # dependencies
-HEADERS =
+HEADERS = lambrex.h
 DEPLIBS = -lamrex -llambrex
 LIBS = -lgfortran
 
@@ -17,8 +18,6 @@ LIBS = -lgfortran
 
 pulse: pulse.o $(DEPLIBS)
 	$(CXX) $< -o $@ -L$(AMREXDIR)/lib -L$(LAMBREXDIR) $(DEPLIBS) $(LIBS)
-
-all: pulse
 
 .PHONY: clean
 
