--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,7 +1,29 @@
+add_executable(
+  c2InitTests
+  catch2Main.cpp catch2InitTests.cpp ${CMAKE_SOURCE_DIR}/include/lambrex.h
+)
+target_compile_features(c2InitTests PUBLIC cxx_std_11)
+target_compile_definitions(c2InitTests PRIVATE AMREX_SPACEDIM=${DIM})
+target_include_directories(
+  c2InitTests
+  PRIVATE
+    ${CMAKE_SOURCE_DIR}/libamrex/include
+    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_SOURCE_DIR}/src
+)
+target_link_directories(
+  c2InitTests
+  PRIVATE ${CMAKE_SOURCE_DIR}/liblambrex
+)
+target_link_libraries(c2InitTests PRIVATE lambrex AMReX::amrex gfortran Catch2::Catch2)
+set_target_properties(
+  c2InitTests
+  PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bins
+)
+catch_discover_tests(c2InitTests WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/bins)
+
 add_executable(pulse pulse.cpp ${CMAKE_SOURCE_DIR}/include/lambrex.h)
-
 target_compile_features(pulse PUBLIC cxx_std_11)
-
 target_compile_options(
   pulse
   PRIVATE
@@ -10,9 +32,7 @@ target_compile_options(
     # MSVC warnings
     $<$<CXX_COMPILER_ID:MSVC>:/W4>
 )
-
 target_compile_definitions(pulse PRIVATE AMREX_SPACEDIM=${DIM})
-
 target_include_directories(
   pulse
   PRIVATE
@@ -20,14 +40,11 @@ target_include_directories(
     ${CMAKE_SOURCE_DIR}/include
     ${CMAKE_SOURCE_DIR}/src
 )
-
 target_link_directories(
   pulse
   PRIVATE ${CMAKE_SOURCE_DIR}/liblambrex
 )
-
 target_link_libraries(pulse PRIVATE lambrex AMReX::amrex gfortran)
-
 set_target_properties(
   pulse
   PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bins
