--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 add_executable(pulse pulse.cpp)
 
 # clang/GCC warnings
@@ -6,3 +5,11 @@ target_compile_options(pulse
   PRIVATE $<$<OR:$<CXX_COMPILER_ID:GNU>,$<CXX_COMPILER_ID:Clang>>:-Wall>
   )
 target_link_libraries(pulse PRIVATE lambrex)
+
+add_executable(amr_pulse amr_pulse.cpp)
+
+# clang/GCC warnings
+target_compile_options(amr_pulse
+  PRIVATE $<$<OR:$<CXX_COMPILER_ID:GNU>,$<CXX_COMPILER_ID:Clang>>:-Wall>
+  )
+target_link_libraries(amr_pulse PRIVATE lambrex)
