first steps on metaprogramming the LB - velocity set is the only thing dealt with so far (and the collisions require D3Q15)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project(
   DESCRIPTION "Lattice Boltzmann code built on AMReX"
   LANGUAGES CXX
   )
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 option(LAMBREX_USE_CONAN "Build dependencies with Conan" ON)
 option(LAMBREX_BUILD_EXAMPLES "Build the tests" ON)
@@ -22,10 +25,7 @@ if (LAMBREX_USE_CONAN)
 endif()
 
 # You may need to set AMREX_DIR to help cmake find the config files
-find_package(AMReX 19.03 REQUIRED)
-if (NOT "${AMREX_DIM}" EQUAL 3)
-  message(FATAL_ERROR "AMReX compiled not for 3D!")
-endif()
+find_package(AMReX REQUIRED 3D)
 
 add_subdirectory(src)
 if (LAMBREX_BUILD_EXAMPLES)
