--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,5 +10,5 @@ target_include_directories(lambrex
   PUBLIC ${CMAKE_SOURCE_DIR}/include
   )
 target_link_libraries(lambrex
-  PUBLIC AMReX::amrex gfortran
+  PUBLIC AMReX::amrex AMReX::Flags_CXX gfortran
   )
